src/varphi_devkit/antlr/VarphiParser.py
# Generated from src/varphi_devkit/Varphi.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class VarphiParser(Parser):

    grammarFileName = "Varphi.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'('",
        "')'",
        "','",
        "'*'",
        "'LEFT'",
        "'RIGHT'",
        "'STAY'",
        "'BLANK'",
    ]

    symbolicNames = [
        "<INVALID>",
        "LPAREN",
        "RPAREN",
        "COMMA",
        "STAR",
        "LEFT_KW",
        "RIGHT_KW",
        "STAY_KW",
        "BLANK_KW",
        "ALPHANUM",
        "ID",
        "COMMENT",
        "MULTI_COMMENT",
        "WS",
        "NEWLINE",
    ]

    RULE_program = 0
    RULE_transition = 1
    RULE_read_symbols = 2
    RULE_write_symbols = 3
    RULE_shift_directions = 4
    RULE_state_id = 5
    RULE_symbol = 6
    RULE_direction = 7

    ruleNames = [
        "program",
        "transition",
        "read_symbols",
        "write_symbols",
        "shift_directions",
        "state_id",
        "symbol",
        "direction",
    ]

    EOF = Token.EOF
    LPAREN = 1
    RPAREN = 2
    COMMA = 3
    STAR = 4
    LEFT_KW = 5
    RIGHT_KW = 6
    STAY_KW = 7
    BLANK_KW = 8
    ALPHANUM = 9
    ID = 10
    COMMENT = 11
    MULTI_COMMENT = 12
    WS = 13
    NEWLINE = 14

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def transition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(VarphiParser.TransitionContext)
            else:
                return self.getTypedRuleContext(VarphiParser.TransitionContext, i)

        def EOF(self):
            return self.getToken(VarphiParser.EOF, 0)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(VarphiParser.NEWLINE)
            else:
                return self.getToken(VarphiParser.NEWLINE, i)

        def getRuleIndex(self):
            return VarphiParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

    def program(self):

        localctx = VarphiParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 14:
                self.state = 16
                self.match(VarphiParser.NEWLINE)
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self.transition()
            self.state = 31
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 24
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 23
                        self.match(VarphiParser.NEWLINE)
                        self.state = 26
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la == 14):
                            break

                    self.state = 28
                    self.transition()
                self.state = 33
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 14:
                self.state = 34
                self.match(VarphiParser.NEWLINE)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(VarphiParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TransitionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.current_state = None  # State_idContext
            self.next_state = None  # State_idContext

        def read_symbols(self):
            return self.getTypedRuleContext(VarphiParser.Read_symbolsContext, 0)

        def write_symbols(self):
            return self.getTypedRuleContext(VarphiParser.Write_symbolsContext, 0)

        def shift_directions(self):
            return self.getTypedRuleContext(VarphiParser.Shift_directionsContext, 0)

        def state_id(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(VarphiParser.State_idContext)
            else:
                return self.getTypedRuleContext(VarphiParser.State_idContext, i)

        def getRuleIndex(self):
            return VarphiParser.RULE_transition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTransition"):
                listener.enterTransition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTransition"):
                listener.exitTransition(self)

    def transition(self):

        localctx = VarphiParser.TransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_transition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            localctx.current_state = self.state_id()
            self.state = 43
            self.read_symbols()
            self.state = 44
            localctx.next_state = self.state_id()
            self.state = 45
            self.write_symbols()
            self.state = 46
            self.shift_directions()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Read_symbolsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(VarphiParser.LPAREN, 0)

        def symbol(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(VarphiParser.SymbolContext)
            else:
                return self.getTypedRuleContext(VarphiParser.SymbolContext, i)

        def RPAREN(self):
            return self.getToken(VarphiParser.RPAREN, 0)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(VarphiParser.COMMA)
            else:
                return self.getToken(VarphiParser.COMMA, i)

        def getRuleIndex(self):
            return VarphiParser.RULE_read_symbols

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRead_symbols"):
                listener.enterRead_symbols(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRead_symbols"):
                listener.exitRead_symbols(self)

    def read_symbols(self):

        localctx = VarphiParser.Read_symbolsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_read_symbols)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(VarphiParser.LPAREN)
            self.state = 49
            self.symbol()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 3:
                self.state = 50
                self.match(VarphiParser.COMMA)
                self.state = 51
                self.symbol()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(VarphiParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Write_symbolsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(VarphiParser.LPAREN, 0)

        def symbol(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(VarphiParser.SymbolContext)
            else:
                return self.getTypedRuleContext(VarphiParser.SymbolContext, i)

        def RPAREN(self):
            return self.getToken(VarphiParser.RPAREN, 0)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(VarphiParser.COMMA)
            else:
                return self.getToken(VarphiParser.COMMA, i)

        def getRuleIndex(self):
            return VarphiParser.RULE_write_symbols

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWrite_symbols"):
                listener.enterWrite_symbols(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWrite_symbols"):
                listener.exitWrite_symbols(self)

    def write_symbols(self):

        localctx = VarphiParser.Write_symbolsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_write_symbols)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(VarphiParser.LPAREN)
            self.state = 60
            self.symbol()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 3:
                self.state = 61
                self.match(VarphiParser.COMMA)
                self.state = 62
                self.symbol()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(VarphiParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Shift_directionsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(VarphiParser.LPAREN, 0)

        def direction(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(VarphiParser.DirectionContext)
            else:
                return self.getTypedRuleContext(VarphiParser.DirectionContext, i)

        def RPAREN(self):
            return self.getToken(VarphiParser.RPAREN, 0)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(VarphiParser.COMMA)
            else:
                return self.getToken(VarphiParser.COMMA, i)

        def getRuleIndex(self):
            return VarphiParser.RULE_shift_directions

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterShift_directions"):
                listener.enterShift_directions(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitShift_directions"):
                listener.exitShift_directions(self)

    def shift_directions(self):

        localctx = VarphiParser.Shift_directionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_shift_directions)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(VarphiParser.LPAREN)
            self.state = 71
            self.direction()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 3:
                self.state = 72
                self.match(VarphiParser.COMMA)
                self.state = 73
                self.direction()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(VarphiParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class State_idContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VarphiParser.ID, 0)

        def ALPHANUM(self):
            return self.getToken(VarphiParser.ALPHANUM, 0)

        def LEFT_KW(self):
            return self.getToken(VarphiParser.LEFT_KW, 0)

        def RIGHT_KW(self):
            return self.getToken(VarphiParser.RIGHT_KW, 0)

        def STAY_KW(self):
            return self.getToken(VarphiParser.STAY_KW, 0)

        def BLANK_KW(self):
            return self.getToken(VarphiParser.BLANK_KW, 0)

        def getRuleIndex(self):
            return VarphiParser.RULE_state_id

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterState_id"):
                listener.enterState_id(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitState_id"):
                listener.exitState_id(self)

    def state_id(self):

        localctx = VarphiParser.State_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_state_id)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 2016) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SymbolContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALPHANUM(self):
            return self.getToken(VarphiParser.ALPHANUM, 0)

        def BLANK_KW(self):
            return self.getToken(VarphiParser.BLANK_KW, 0)

        def STAR(self):
            return self.getToken(VarphiParser.STAR, 0)

        def getRuleIndex(self):
            return VarphiParser.RULE_symbol

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSymbol"):
                listener.enterSymbol(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSymbol"):
                listener.exitSymbol(self)

    def symbol(self):

        localctx = VarphiParser.SymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_symbol)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 784) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_KW(self):
            return self.getToken(VarphiParser.LEFT_KW, 0)

        def RIGHT_KW(self):
            return self.getToken(VarphiParser.RIGHT_KW, 0)

        def STAY_KW(self):
            return self.getToken(VarphiParser.STAY_KW, 0)

        def getRuleIndex(self):
            return VarphiParser.RULE_direction

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDirection"):
                listener.enterDirection(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDirection"):
                listener.exitDirection(self)

    def direction(self):

        localctx = VarphiParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_direction)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 224) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
